2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_char_p): removed (good only for "basic streams")
	(handle_isset, stream_reset_eltype): look at strm_eltype directly

2002-01-18  Sam Steingold  <sds@gnu.org>

	support #! UNIX scripts on WIN32 too
	* io.d, constsym.d, spvw.d, subr.d (UNIX-EXECUTABLE-READER):
	define on WIN32_NATIVE too

2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (SOCKET-STATUS): fix a GC safety bug
	(handle_isset): mark as GC-unsafe
	Reported by Todd Sabin <tas@webspan.net>

2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (FILE-POSITION): work on any stream, not just an open
	file stream, as per ANSI CL

2002-01-17  Sam Steingold  <sds@gnu.org>

	* stream.d (read-byte): respect the unread chars
	(stream_reset_eltype): new function - rectify the
	ignore_next_LF lossage when changing STREAM-ELEMENT-TYPE
	(BUILT-IN-STREAM-SET-ELEMENT-TYPE, SET-STREAM-EXTERNAL-FORMAT): use it
	(resolve_synonym_stream): new function
	(TERMINAL-RAW, check_open_file_stream): use it

2002-01-16  Sam Steingold  <sds@gnu.org>

	* inspect.lisp (close) [html-stream-out]: new method
	(*with-html-output-doctype*): new user variable, defaults to XHTML
	(with-html-output): use it; close the HTML stream too
	(crlf): removed (we create an :EXTERNAL-FORMAT :DOS socket)
	(with-http-output): new keyword args: RETURN-NAME and RETURN-CODE
	do not call CRLF, rely on the socket to provide proper EOL
	(http-error): new function
	(http-command): reconnect when a KEEP-ALIVE connection times out;
	handle invalid requests (e.g., for favicon.ico) and ":"->"%3a"
	[FIXME: disabled KEEP-ALIVE connections because it appears that
	 content length in WITH-HTTP-OUTPUT is computed incorrectly]
	(inspect-frontend) [http]: handle NIL ID returned by HTTP-COMMAND
	due to an invalid request

2002-01-16  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-stream-flush-buffer, stream-line-column)
	(stream-start-line-p): check the return value of